--- a/CouponMarket/CouponMarket_demo/app/index.html
+++ b/CouponMarket/CouponMarket_demo/app/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>MetaCoin - Truffle Webpack Demo w/ Frontend</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <script src="./app.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
+
 <body>
-  
-  <br><br><button id="send" onclick="App.sendCoin()">Send MetaCoin</button>
-  <br><br>
-  <span id="status"></span>
-  
+
+  <br>
+  <br>
+  <button id="send">Send MetaCoin</button>
+  <br>
+  <br>
+  <span id=" status "></span>
+
+  <script>
+    $('#send').click(async function () {
+      console.log('clicked!');
+      var coupon_info = await App.newCoupon();
+      console.log(coupon_info);
+    });
+  </script>
 </body>
+
 </html>
