--- a/CouponMarket/CouponMarket_demo/app/index.html
+++ b/CouponMarket/CouponMarket_demo/app/index.html
@@ -26,15 +26,15 @@
     <form id="create_coupon_form">
       <div class="form-group col-xs-2 col-md-2">
         <label for="name" class="control-label">Value</label>
-        <input type="text" value='' class="form-control" id="name" placeholder="100">
+        <input type="text" value='' class="form-control" id="value" placeholder="100">
       </div>
       <div class="form-group col-xs-2 col-md-2">
         <label for="name" class="control-label">Start time</label>
-        <input type="text" value='' class="form-control" id="name" placeholder="0">
+        <input type="text" value='' class="form-control" id="startTime" placeholder="0">
       </div>
       <div class="form-group col-xs-2 col-md-2">
         <label for="name" class="control-label">End time</label>
-        <input type="text" value='' class="form-control" id="name" placeholder="10">
+        <input type="text" value='' class="form-control" id="endTime" placeholder="10">
       </div>
       <div class="form-group col-xs-2 col-md-2">
         <button type="submit " class="btn btn-default">Create coupon</button>
@@ -45,7 +45,7 @@
 
     <div id="coupons ">
 
-      <table class="table table-striped table-hover " id="coupon_info ">
+      <table class="table table-striped table-hover" id="coupon_info">
         <thead>
           <tr>
             <th>ID</th>
@@ -69,7 +69,10 @@
     <script>
       $('#create_coupon_form').submit(async function () {
         console.log('clicked!');
-        var coupon_info = await App.newCoupon();
+        var value = $('#value').val() || 10;
+        var startTime = $('#startTime').val() || 0;
+        var endTime = $('#endTime').val() || 10;
+        var coupon_info = await App.newCoupon(value, startTime, endTime);
         $('#coupon_info > tbody:last-child').append(`
         <tr>
           <td>`+ coupon_info.ID + `</td>
