--- a/CouponMarket/CouponMarket_demo/app/index.html
+++ b/CouponMarket/CouponMarket_demo/app/index.html
@@ -20,51 +20,74 @@
 </head>
 
 
-<div class="container">
 
   <body>
-    <form id="create_coupon_form">
-      <div class="form-group col-xs-2 col-md-2">
-        <label for="value" class="control-label">Value</label>
-        <input type="text" value='' class="form-control" id="value" placeholder="100">
-      </div>
-      <div class="form-group col-xs-2 col-md-2">
-        <label for="startTime" class="control-label">Start time</label>
-        <input type="text" value='' class="form-control" id="startTime" placeholder="0">
-      </div>
-      <div class="form-group col-xs-2 col-md-2">
-        <label for="endTime" class="control-label">End time</label>
-        <input type="text" value='' class="form-control" id="endTime" placeholder="10">
-      </div>
-      <div class="form-group col-xs-2 col-md-2">
-        <label for="hi" class="control-label" style="color:white">none</label>
-        <input type="button" name="submit" id="create_coupon" value="Create coupon">
-      </div>
-    </form>
+    <div class="container">
 
-    <br>
+      <div class="row">
+        <form id="create_coupon_form">
+          <div class="form-group col-md-3">
+            <label for="value" class="control-label">Value</label>
+            <input type="text" value='' class="form-control" id="value" placeholder="100">
+          </div>
+          <div class="form-group col-md-3">
+            <label for="startTime" class="control-label">Start time</label>
+            <input type="text" value='' class="form-control" id="startTime" placeholder="0">
+          </div>
+          <div class="form-group col-md-3">
+            <label for="endTime" class="control-label">End time</label>
+            <input type="text" value='' class="form-control" id="endTime" placeholder="10">
+          </div>
+          <div class="form-group col-md-3">
+            <label for="create_coupon" class="control-label" style="color:white">none</label>
+            <input class="btn btn-outline-primary" type="button" name="submit" id="create_coupon" value="Create coupon">
+          </div>
+        </form>
+      </div>
 
-    <div id="coupons">
 
-      <table class="table table-striped table-hover" id="coupon_info">
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>owner</th>
-            <th>issuer</th>
-            <th>value</th>
-            <th>startTime</th>
-            <th>endTime</th>
-          </tr>
-        </thead>
-        <tbody>
+      <div class="row">
+        <form id="transfer_coupon_form">
+          <div class="form-group col-md-3">
+            <label for="value" class="control-label">Coupon ID</label>
+            <input type="text" value='' class="form-control" id="id" placeholder="100">
+          </div>
+          <div class="form-group col-md-3">
+            <label for="startTime" class="control-label">Receiver</label>
+            <input type="text" value='' class="form-control" id="receiver" placeholder="0">
+          </div>
+          <div class="form-group col-md-3">
+            <label for="transfer_coupon" class="control-label" style="color:white">none</label>
+            <input class="btn btn-outline-primary" type="button" name="submit" id="transfer_coupon" value="Transfer coupon">
+          </div>
+        </form>
+      </div>
 
-        </tbody>
-      </table>
+      <br>
+
+      <div id="coupons">
+
+        <table class="table table-striped table-hover" id="coupon_info">
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>owner</th>
+              <th>issuer</th>
+              <th>value</th>
+              <th>startTime</th>
+              <th>endTime</th>
+            </tr>
+          </thead>
+          <tbody>
+
+          </tbody>
+        </table>
+
+      </div>
+
+      <span id="status"></span>
 
     </div>
-
-    <span id="status"></span>
 
     <script>
       $(document).ready(async function () {
@@ -98,6 +121,5 @@
 
     </script>
   </body>
-</div>
 
 </html>
