--- a/CouponMarket/CouponMarket_demo/app/index.html
+++ b/CouponMarket/CouponMarket_demo/app/index.html
@@ -21,86 +21,96 @@
 
 
 
-  <body>
-    <div class="container">
+<body>
+  <div class="container">
 
-      <div class="row">
-        <form id="create_coupon_form">
-          <div class="form-group col-md-3">
-            <label for="value" class="control-label">Value</label>
-            <input type="text" value='' class="form-control" id="value" placeholder="100">
-          </div>
-          <div class="form-group col-md-3">
-            <label for="startTime" class="control-label">Start time</label>
-            <input type="text" value='' class="form-control" id="startTime" placeholder="0">
-          </div>
-          <div class="form-group col-md-3">
-            <label for="endTime" class="control-label">End time</label>
-            <input type="text" value='' class="form-control" id="endTime" placeholder="10">
-          </div>
-          <div class="form-group col-md-3">
-            <label for="create_coupon" class="control-label" style="color:white">none</label>
-            <input class="btn btn-outline-primary" type="button" name="submit" id="create_coupon" value="Create coupon">
-          </div>
-        </form>
-      </div>
+    <div class="row">
+      <form id="create_coupon_form">
+        <div class="form-group col-md-3">
+          <label for="value" class="control-label">Value</label>
+          <input type="text" value='' class="form-control" id="value" placeholder="100">
+        </div>
+        <div class="form-group col-md-3">
+          <label for="startTime" class="control-label">Start time</label>
+          <input type="text" value='' class="form-control" id="startTime" placeholder="0">
+        </div>
+        <div class="form-group col-md-3">
+          <label for="endTime" class="control-label">End time</label>
+          <input type="text" value='' class="form-control" id="endTime" placeholder="10">
+        </div>
+        <div class="form-group col-md-3">
+          <label for="create_coupon" class="control-label" style="color:white">none</label>
+          <input class="btn btn-outline-primary" type="button" name="submit" id="create_coupon" value="Create coupon">
+        </div>
+      </form>
+    </div>
 
 
-      <div class="row">
-        <form id="transfer_coupon_form">
-          <div class="form-group col-md-3">
-            <label for="value" class="control-label">Coupon ID</label>
-            <input type="text" value='' class="form-control" id="id" placeholder="100">
-          </div>
-          <div class="form-group col-md-3">
-            <label for="startTime" class="control-label">Receiver</label>
-            <input type="text" value='' class="form-control" id="receiver" placeholder="0">
-          </div>
-          <div class="form-group col-md-3">
-            <label for="transfer_coupon" class="control-label" style="color:white">none</label>
-            <input class="btn btn-outline-primary" type="button" name="submit" id="transfer_coupon" value="Transfer coupon">
-          </div>
-        </form>
-      </div>
+    <div class="row">
+      <form id="transfer_coupon_form">
+        <div class="form-group col-md-3">
+          <label for="value" class="control-label">Coupon ID</label>
+          <input type="text" value='' class="form-control" id="id" placeholder="1">
+        </div>
+        <div class="form-group col-md-3">
+          <label for="startTime" class="control-label">Receiver</label>
+          <input type="text" value='' class="form-control" id="receiver" placeholder="accounts[1]">
+        </div>
+        <div class="form-group col-md-3">
+          <label for="transfer_coupon" class="control-label" style="color:white">none</label>
+          <input class="btn btn-outline-primary" type="button" name="submit" id="transfer" value="Transfer coupon">
+        </div>
+      </form>
+    </div>
 
-      <br>
+    <div class="row">
+      <form id="redeem_coupon_form">
+        <div class="form-group col-md-3">
+          <label for="value" class="control-label">Coupon ID</label>
+          <input type="text" value='' class="form-control" id="id2" placeholder="1">
+        </div>
+        <div class="form-group col-md-3">
+          <label for="transfer_coupon" class="control-label" style="color:white">none</label>
+          <input class="btn btn-outline-primary" type="button" name="submit" id="redeem" value="Redeem coupon">
+        </div>
+      </form>
+    </div>
 
-      <div id="coupons">
+    <br>
 
-        <table class="table table-striped table-hover" id="coupon_info">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>owner</th>
-              <th>issuer</th>
-              <th>value</th>
-              <th>startTime</th>
-              <th>endTime</th>
-            </tr>
-          </thead>
-          <tbody>
+    <div id="coupons">
 
-          </tbody>
-        </table>
+      <table class="table table-striped table-hover" id="coupon_info">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>owner</th>
+            <th>issuer</th>
+            <th>value</th>
+            <th>startTime</th>
+            <th>endTime</th>
+          </tr>
+        </thead>
+        <tbody>
 
-      </div>
-
-      <span id="status"></span>
+        </tbody>
+      </table>
 
     </div>
 
-    <script>
-      $(document).ready(async function () {
-        var accounts = await App.getAccs();
-        console.log(accounts);
-      });
-      $('#create_coupon').click(async function () {
-        console.log('clicked!');
-        var value = $('#value').val() || 100;
-        var startTime = $('#startTime').val() || 0;
-        var endTime = $('#endTime').val() || 10;
-        var coupon_info = await App.newCoupon(value, startTime, endTime);
-        $('#coupon_info > tbody:last-child').append(`
+    <span id="status"></span>
+
+  </div>
+
+  <script>
+    var accounts;
+    $('#create_coupon').click(async function () {
+      console.log('create coupon btn clicked!');
+      var value = $('#value').val() || 100;
+      var startTime = $('#startTime').val() || 0;
+      var endTime = $('#endTime').val() || 10;
+      var coupon_info = await App.newCoupon(value, startTime, endTime);
+      $('#coupon_info > tbody:last-child').append(`
         <tr>
           <td>`+ coupon_info.ID + `</td>
           <td>`+ coupon_info.owner + `</td>
@@ -110,11 +120,26 @@
           <td>`+ coupon_info.endTime + `</td>
         </tr>
         `);
-        console.log(coupon_info);
-        return false;
-      });
+      console.log(coupon_info);
+      return false;
+    });
+    $('#transfer').click(async function () {
+      console.log('transfer btn clicked!');
 
-    </script>
-  </body>
+      accounts = await App.getAccs();
+      var couponID = $('#id').val() || 1;
+      var receiver = $('#receiver').val() || accounts[1];
+      App.transfer(couponID, receiver);
+    });
+    $('#redeem').click(async function () {
+      console.log('transfer btn clicked!');
+
+      accounts = await App.getAccs();
+      var couponID = $('#id2').val() || 1;
+      App.redeem(couponID);
+    });
+
+  </script>
+</body>
 
 </html>
