--- a/CouponMarket/CouponMarket_demo/app/index.html
+++ b/CouponMarket/CouponMarket_demo/app/index.html
@@ -59,8 +59,9 @@
           <input type="text" value='' class="form-control" id="id" placeholder="1">
         </div>
         <div class="form-group col-md-3">
-          <label for="startTime" class="control-label">Owner</label>
-          <input type="text" value='' class="form-control" id="owner" placeholder="0">
+          <label for="owner_transfer" class="control-label">Owner</label>
+          <select class="form-control" name="owner_transfer" id="owner_transfer">
+          </select>
         </div>
         <div class="form-group col-md-3">
           <!-- <label for="startTime" class="control-label">Receiver</label>
@@ -84,8 +85,9 @@
           <input type="text" value='' class="form-control" id="id2" placeholder="1">
         </div>
         <div class="form-group col-md-3">
-          <label for="startTime" class="control-label">Owner</label>
-          <input type="text" value='' class="form-control" id="owner" placeholder="0">
+          <label for="owner_redeem" class="control-label">Owner</label>
+          <select class="form-control" name="owner_redeem" id="owner_redeem">
+          </select>
         </div>
         <div class="form-group col-md-3 parent-vertical-centralized">
           <label for="transfer_coupon" class="control-label" style="color:white">none</label>
