solve img profile

--- a/CouponMarket/CouponMarket_demo/app/index.html
+++ b/CouponMarket/CouponMarket_demo/app/index.html
@@ -25,6 +25,16 @@
     flex-direction: column;
     justify-content: center;
   }
+
+  .parent-horizontal-centralized {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .profile_img_align_center {
+    margin-top: -5px;
+  }
 </style>
 
 <body>
