--- a/CouponMarket/CouponMarket_demo/app/index.html
+++ b/CouponMarket/CouponMarket_demo/app/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="form-group col-md-3 parent-vertical-centralized">
           <label for="create_coupon" class="control-label" style="color:white">none</label>
-          <input class="btn btn-outline-primary" type="button" name="submit" id="create_coupon" value="Create coupon">
+          <input class="btn btn-primary" type="button" name="submit" id="create_coupon" value="Create coupon">
         </div>
       </form>
     </div>
@@ -83,7 +83,7 @@
 
         <div class="form-group col-md-3 parent-vertical-centralized">
           <label for="transfer_coupon" class="control-label" style="color:white">none</label>
-          <input class="btn btn-outline-primary" type="button" name="submit" id="transfer" value="Transfer coupon">
+          <input class="btn btn-primary" type="button" name="submit" id="transfer" value="Transfer coupon">
         </div>
       </form>
     </div>
@@ -101,9 +101,14 @@
         </div>
         <div class="form-group col-md-3 parent-vertical-centralized">
           <label for="transfer_coupon" class="control-label" style="color:white">none</label>
-          <input class="btn btn-outline-primary" type="button" name="submit" id="redeem" value="Redeem coupon">
+          <input class="btn btn-primary" type="button" name="submit" id="redeem" value="Redeem coupon">
         </div>
       </form>
+
+      <div class="form-group col-md-3 parent-vertical-centralized">
+        <label for="transfer_coupon" class="control-label" style="color:white">none</label>
+        <input class="btn btn-success" type="button" name="load" id="load" value="Load!!!">
+      </div>
     </div>
 
     <br>
