--- a/CouponMarket/CouponMarket_demo/app/index.html
+++ b/CouponMarket/CouponMarket_demo/app/index.html
@@ -56,7 +56,8 @@
         </div>
         <div class="form-group col-md-3 parent-vertical-centralized">
           <label for="create_coupon" class="control-label" style="color:white">none</label>
-          <input class="btn btn-primary" type="button" name="submit" id="create_coupon" value="Create coupon">
+          <!-- <input class="btn btn-medium btn-blue btn-radius" type="button" name="submit" id="create_coupon" value="Create coupon"> -->
+          <a class="btn btn-blue" id="create_coupon" href="#">Create coupon</a>
         </div>
       </form>
     </div>
@@ -83,7 +84,7 @@
 
         <div class="form-group col-md-3 parent-vertical-centralized">
           <label for="transfer_coupon" class="control-label" style="color:white">none</label>
-          <input class="btn btn-primary" type="button" name="submit" id="transfer" value="Transfer coupon">
+          <a class="btn btn-orange" id="transfer" href="#">Transfer coupon</a>
         </div>
       </form>
     </div>
@@ -101,13 +102,15 @@
         </div>
         <div class="form-group col-md-3 parent-vertical-centralized">
           <label for="transfer_coupon" class="control-label" style="color:white">none</label>
-          <input class="btn btn-primary" type="button" name="submit" id="redeem" value="Redeem coupon">
+          <a class="btn btn-green" id="redeem" href="#">Redeem coupon</a>
+          
         </div>
       </form>
 
       <div class="form-group col-md-3 parent-vertical-centralized">
         <label for="transfer_coupon" class="control-label" style="color:white">none</label>
-        <input class="btn btn-success" type="button" name="load" id="load" value="Load!!!">
+        <a class="btn btn-gray" id="load" href="#">Load</a>
+        
       </div>
     </div>
 
