change load to refresh

--- a/CouponMarket/CouponMarket_demo/app/index.html
+++ b/CouponMarket/CouponMarket_demo/app/index.html
@@ -103,14 +103,14 @@
         <div class="form-group col-md-3 parent-vertical-centralized">
           <label for="transfer_coupon" class="control-label" style="color:white">none</label>
           <a class="btn btn-green" id="redeem" href="#">Redeem coupon</a>
-          
+
         </div>
       </form>
 
       <div class="form-group col-md-3 parent-vertical-centralized">
         <label for="transfer_coupon" class="control-label" style="color:white">none</label>
-        <a class="btn btn-gray" id="load" href="#">Load</a>
-        
+        <a class="btn btn-gray" id="refresh" href="#">Refresh</a>
+
       </div>
     </div>
 
