fix refresh issue

--- a/CouponMarket/CouponMarket_demo/app/index.html
+++ b/CouponMarket/CouponMarket_demo/app/index.html
@@ -114,6 +114,12 @@
       </div>
     </div>
 
+    <div id="display_volume">
+      <b>Current volume:</b>
+      <div id="current_volume" style="display:inline-block">
+
+      </div>
+    </div>
     <br>
 
     <div id="coupons">
