All the avatars are ready!

--- a/CouponMarket/CouponMarket_demo/app/index.html
+++ b/CouponMarket/CouponMarket_demo/app/index.html
@@ -81,14 +81,14 @@
         </div>
         <div class="form-group col-md-3">
           <label for="owner_transfer" class="control-label">Owner</label>
-          <select class="form-control" name="owner_transfer" id="owner_transfer">
+          <select class="form-control avatar-select" name="owner_transfer" id="owner_transfer">
           </select>
         </div>
         <div class="form-group col-md-3">
           <!-- <label for="startTime" class="control-label">Receiver</label>
           <input type="text" value='' class="form-control" id="receiver" placeholder="accounts[1]"> -->
           <label for="receiver" class="control-label">Receiver</label>
-          <select class="form-control" name="receiver" id="receiver">        
+          <select class="form-control avatar-select" name="receiver" id="receiver">        
           </select>
         </div>
 
@@ -107,7 +107,7 @@
         </div>
         <div class="form-group col-md-3">
           <label for="owner_redeem" class="control-label">Owner</label>
-          <select class="form-control" name="owner_redeem" id="owner_redeem">
+          <select class="form-control avatar-select" name="owner_redeem" id="owner_redeem">
           </select>
         </div>
         <div class="form-group col-md-3 parent-vertical-centralized">
