--- a/CouponMarket/CouponMarket_demo/app/index.html
+++ b/CouponMarket/CouponMarket_demo/app/index.html
@@ -7,7 +7,8 @@
   <script src="./app.js"></script>
 
   <!-- jQuery -->
-  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/themes/base/jquery-ui.css" type="text/css" media="all" /> 
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/themes/base/jquery-ui.css" type="text/css"
+    media="all" />
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -19,20 +20,16 @@
     crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
-<<<<<<< HEAD
   <!-- ... -->
   <script type="text/javascript" src="/bower_components/moment/min/moment.min.js"></script>
   <script type="text/javascript" src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css"
   />
-=======
 
   <!-- Bootstrap Select -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script>
 
->>>>>>> 7799258fff34a17eddfa527a8d63ef0e112aef36
 </head>
 
 <style>
@@ -64,7 +61,8 @@
         </div>
         <div class="form-group col-md-3">
           <label for="startTime" class="control-label">Start time</label>
-          <div class='input-group date' id='startTime'>
+          <br> &nbsp;
+          <div class='input-group date' id='startTime' style="margin-left: -3px;">
             <input type='text' class="form-control" />
             <span class="input-group-addon">
               <span class="glyphicon glyphicon-calendar"></span>
@@ -73,7 +71,8 @@
         </div>
         <div class="form-group col-md-3">
           <label for="endTime" class="control-label">End time</label>
-          <div class='input-group date' id='endTime'>
+          <br> &nbsp;
+          <div class='input-group date' id='endTime' style="margin-left: -3px;">
             <input type='text' class="form-control" />
             <span class="input-group-addon">
               <span class="glyphicon glyphicon-calendar"></span>
@@ -104,7 +103,7 @@
           <!-- <label for="startTime" class="control-label">Receiver</label>
           <input type="text" value='' class="form-control" id="receiver" placeholder="accounts[1]"> -->
           <label for="receiver" class="control-label">Receiver</label>
-          <select class="form-control avatar-select" name="receiver" id="receiver">        
+          <select class="form-control avatar-select" name="receiver" id="receiver">
           </select>
         </div>
 
