--- a/CouponMarket/CouponMarket_demo/app/index.html
+++ b/CouponMarket/CouponMarket_demo/app/index.html
@@ -63,7 +63,7 @@
           <label for="startTime" class="control-label">Start time</label>
           <br> &nbsp;
           <div class='input-group date' id='startTime' style="margin-left: -3px;">
-            <input type='text' class="form-control" />
+            <input type='text' class="form-control" placeholder="current time" />
             <span class="input-group-addon">
               <span class="glyphicon glyphicon-calendar"></span>
             </span>
@@ -73,7 +73,7 @@
           <label for="endTime" class="control-label">End time</label>
           <br> &nbsp;
           <div class='input-group date' id='endTime' style="margin-left: -3px;">
-            <input type='text' class="form-control" />
+            <input type='text' class="form-control" placeholder="an hour later" />
             <span class="input-group-addon">
               <span class="glyphicon glyphicon-calendar"></span>
             </span>
